--- a/p1.ipynb
+++ b/p1.ipynb
@@ -83,7 +83,9 @@
     "import numpy as np\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "data = pd.read_csv(r\"C:\\Users\\year3\\Downloads\\Custom_CNN_Features.csv\")\n",
-    "print (data)"
+    "print (data)\n",
+    "print(data)\n",
+    "print(data)"
    ]
   },
   {
