--- a/p1.ipynb
+++ b/p1.ipynb
@@ -552,6 +552,32 @@
     "print(f'Interclass distance between Class A and Class B: {interdist2}')\n",
     "print(f'Interclass distance between Class A and Class B: {interdist3}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "524e373c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class 1 Centroid: 0.05616451724847002\n",
+      "Class 1 Centroid: 4.653751827650551\n"
+     ]
+    }
+   ],
+   "source": [
+    "unq = df['Label'].unique()\n",
+    "c_mean = {}\n",
+    "for classlable in unq:\n",
+    "    classdata = df[df['Label'] == classlable]\n",
+    "    classmean = np.mean(classdata[['f0', 'f1']], axis=0)\n",
+    "    c_mean[classlable] = classmean\n",
+    "for class_lable, centroid in classmean.items():\n",
+    "    print(f'Class {classlable} Centroid: {centroid}')\n"
+   ]
   }
  ],
  "metadata": {
