--- a/p1.ipynb
+++ b/p1.ipynb
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "4c9f5a6e",
    "metadata": {},
    "outputs": [
@@ -943,8 +943,8 @@
     "y_test_pred = neigh.predict(X_test)\n",
     "\n",
     "# Calculate confusion matrices for training and test data\n",
-    "confusion_matrix_train = confusion_matrix(y_train, y_train_pred)\n",
-    "confusion_matrix_test = confusion_matrix(y_test, y_test_pred)\n",
+    "confusion_train = confusion_matrix(y_train, y_train_pred)\n",
+    "confusion_test = confusion_matrix(y_test, y_test_pred)\n",
     "\n",
     "# Generate classification reports for training and test data\n",
     "report_train = classification_report(y_train, y_train_pred)\n",
@@ -952,12 +952,12 @@
     "\n",
     "# Print confusion matrices and classification reports\n",
     "print(\"Confusion Matrix (Training Data):\")\n",
-    "print(confusion_matrix_train)\n",
+    "print(confusion_train)\n",
     "print(\"\\nClassification Report (Training Data):\")\n",
     "print(report_train)\n",
     "\n",
     "print(\"\\nConfusion Matrix (Test Data):\")\n",
-    "print(confusion_matrix_test)\n",
+    "print(confusion_test)\n",
     "print(\"\\nClassification Report (Test Data):\")\n",
     "print(report_test)\n"
    ]
