--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "aa95dac7-6b2d-4298-887a-2e24b47acafe",
    "metadata": {},
    "outputs": [
@@ -94,11 +94,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4f48649c-9504-4573-824b-745f7296f28f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Depth: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# Load your dataset (replace 'data.csv' with your data file)\n",
+    "\n",
+    "\n",
+    "# Separate features (X) and target variable (y)\n",
+    "X = df.drop(columns=['buys_computer'])\n",
+    "y = df['buys_computer']\n",
+    "\n",
+    "# Handle categorical variables (one-hot encoding)\n",
+    "categorical_cols = X.select_dtypes(include=['object']).columns\n",
+    "encoder = OneHotEncoder(sparse_output=False, drop='first')\n",
+    "X_encoded = encoder.fit_transform(X[categorical_cols])\n",
+    "\n",
+    "# Impute missing values (if any)\n",
+    "imputer = SimpleImputer(strategy='most_frequent')\n",
+    "X_imputed = imputer.fit_transform(X_encoded)\n",
+    "\n",
+    "# Combine the encoded and imputed data with non-categorical columns\n",
+    "X_final = pd.concat([pd.DataFrame(X_imputed), X.drop(columns=categorical_cols)], axis=1)\n",
+    "\n",
+    "# Create and fit the Decision Tree model\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X_final, y)\n",
+    "\n",
+    "# Get the depth of the constructed tree\n",
+    "tree_depth = model.get_depth()\n",
+    "\n",
+    "print(f\"Decision Tree Depth: {tree_depth}\")"
+   ]
   }
  ],
  "metadata": {
