--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -308,6 +308,81 @@
     "plot_tree(model, filled=True, feature_names=X.columns.tolist(), class_names=class_names.tolist())\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bb7987ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy: 0.9032258064516129\n",
+      "Random Forest Accuracy: 0.9278033794162827\n",
+      "Decision Tree Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.89      0.90       233\n",
+      "           1       0.88      0.91      0.90       295\n",
+      "           2       0.95      0.91      0.93       123\n",
+      "\n",
+      "    accuracy                           0.90       651\n",
+      "   macro avg       0.91      0.90      0.91       651\n",
+      "weighted avg       0.90      0.90      0.90       651\n",
+      "\n",
+      "Random Forest Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.89      0.92       233\n",
+      "           1       0.89      0.97      0.93       295\n",
+      "           2       0.98      0.90      0.94       123\n",
+      "\n",
+      "    accuracy                           0.93       651\n",
+      "   macro avg       0.94      0.92      0.93       651\n",
+      "weighted avg       0.93      0.93      0.93       651\n",
+      "\n",
+      "Decision Tree Confusion Matrix:\n",
+      " [[207  25   1]\n",
+      " [ 21 269   5]\n",
+      " [  0  11 112]]\n",
+      "Random Forest Confusion Matrix:\n",
+      " [[208  24   1]\n",
+      " [  9 285   1]\n",
+      " [  0  12 111]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = data.select_dtypes(include=[float, int])\n",
+    "\n",
+    "X = data.drop(columns=['Label'])\n",
+    "y = data['Label']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "decision_tree = DecisionTreeClassifier(random_state=42)\n",
+    "decision_tree.fit(X_train, y_train)\n",
+    "\n",
+    "random_forest = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "random_forest.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_decision_tree = decision_tree.predict(X_test)\n",
+    "decision_tree_accuracy = accuracy_score(y_test, y_pred_decision_tree)\n",
+    "\n",
+    "y_pred_random_forest = random_forest.predict(X_test)\n",
+    "random_forest_accuracy = accuracy_score(y_test, y_pred_random_forest)\n",
+    "\n",
+    "print(\"Decision Tree Accuracy:\", decision_tree_accuracy)\n",
+    "print(\"Random Forest Accuracy:\", random_forest_accuracy)\n",
+    "\n",
+    "print(\"Decision Tree Classification Report:\\n\", classification_report(y_test, y_pred_decision_tree))\n",
+    "print(\"Random Forest Classification Report:\\n\", classification_report(y_test, y_pred_random_forest))\n",
+    "\n",
+    "print(\"Decision Tree Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_decision_tree))\n",
+    "print(\"Random Forest Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_random_forest))"
+   ]
   }
  ],
  "metadata": {
