--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -23,9 +23,7 @@
    "source": [
     "import pandas as pd\n",
     "import math\n",
-    "\n",
-    "# Create a DataFrame with the provided data\n",
-    "\n",
+    "# Created a dataframe with the provided data\n",
     "data = [\n",
     "    [\"<=30\",\"high\", \"no\", \"fair\", \"no\"],\n",
     "    [\"<=30\",\"high\", \"no\", \"excellent\",  \"no\"],\n",
@@ -42,12 +40,9 @@
     "    [\"31...40\", \"high\", \"yes\",\"fair\", \"yes\"],\n",
     "    [\">40\", \"medium\", \"no\", \"excellent\", \"no\"],\n",
     "]\n",
-    "\n",
     "# Create a Pandas DataFrame\n",
     "df = pd.DataFrame(data, columns=[\"age\", \"income\", \"student\", \"credit_rating\", \"buys_computer\"])\n",
-    "\n",
-    "\n",
-    "# Calculate the entropy of the class label 'buys_computer'\n",
+    "# Calculating the entropy of the class label 'buys_computer'\n",
     "def calculate_entropy(data):\n",
     "    total_samples = len(data)\n",
     "    if total_samples == 0:\n",
@@ -60,10 +55,8 @@
     "        return 0\n",
     "    entropy = -p_positive * math.log2(p_positive) - p_negative * math.log2(p_negative)\n",
     "    return entropy\n",
-    "\n",
     "entropy_root = calculate_entropy(df)\n",
-    "\n",
-    "# Calculate Information Gain for each attribute\n",
+    "# Calculating Information Gain for each attribute\n",
     "def calculate_information_gain(data, attribute, root_entropy):\n",
     "    unique_values = data[attribute].unique()\n",
     "    weighted_entropy_after_split = 0\n",
@@ -74,21 +67,16 @@
     "        weighted_entropy_after_split += weight * subset_entropy\n",
     "    information_gain = root_entropy - weighted_entropy_after_split\n",
     "    return information_gain\n",
-    "\n",
-    "# Calculate Information Gain for each attribute\n",
     "root_entropy = calculate_entropy(df)\n",
     "information_gains = {}\n",
     "for attribute in df.columns[:-1]:  # Exclude the 'buys_computer' column\n",
     "    information_gain = calculate_information_gain(df, attribute, root_entropy)\n",
     "    information_gains[attribute] = information_gain\n",
-    "\n",
-    "# Identify the attribute with the highest Information Gain as the root node\n",
+    "# Identifying the attribute with the highest Information Gain as the root node\n",
     "root_node = max(information_gains, key=information_gains.get)\n",
-    "\n",
     "print(\"Information Gains:\")\n",
     "for attribute, gain in information_gains.items():\n",
     "    print(f\"{attribute}: {gain}\")\n",
-    "\n",
     "print(f\"\\nRoot Node (Highest Information Gain): {root_node}\")"
    ]
   },
@@ -111,33 +99,23 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.impute import SimpleImputer\n",
-    "\n",
-    "# Load your dataset (replace 'data.csv' with your data file)\n",
-    "\n",
-    "\n",
     "# Separate features (X) and target variable (y)\n",
     "X = df.drop(columns=['buys_computer'])\n",
     "y = df['buys_computer']\n",
-    "\n",
-    "# Handle categorical variables (one-hot encoding)\n",
+    "# Handling categorical variables with one hot encoding\n",
     "categorical_cols = X.select_dtypes(include=['object']).columns\n",
     "encoder = OneHotEncoder(sparse_output=False, drop='first')\n",
     "X_encoded = encoder.fit_transform(X[categorical_cols])\n",
-    "\n",
-    "# Impute missing values (if any)\n",
+    "# Imputing missing values (if any)\n",
     "imputer = SimpleImputer(strategy='most_frequent')\n",
     "X_imputed = imputer.fit_transform(X_encoded)\n",
-    "\n",
-    "# Combine the encoded and imputed data with non-categorical columns\n",
+    "# Combining the encoded and imputed data with non-categorical columns\n",
     "X_final = pd.concat([pd.DataFrame(X_imputed), X.drop(columns=categorical_cols)], axis=1)\n",
-    "\n",
-    "# Create and fit the Decision Tree model\n",
+    "# Creating and fitting the Decision Tree model\n",
     "model = DecisionTreeClassifier()\n",
     "model.fit(X_final, y)\n",
-    "\n",
-    "# Get the depth of the constructed tree\n",
+    "# Getting the depth of the constructed tree\n",
     "tree_depth = model.get_depth()\n",
-    "\n",
     "print(f\"Decision Tree Depth: {tree_depth}\")"
    ]
   },
@@ -161,16 +139,11 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from sklearn.tree import plot_tree\n",
-    "\n",
-    "# Assuming you have already created and fitted your Decision Tree model (model)\n",
-    "\n",
     "# Set the figure size for a larger visualization\n",
     "plt.figure(figsize=(70, 20))\n",
-    "\n",
-    "# Use plot_tree to visualize the Decision Tree\n",
+    "# Using plot_tree to visualize the Decision Tree\n",
     "plot_tree(model, filled=True)\n",
-    "\n",
-    "# Show the plot\n",
+    "# To Show the plot use plt.show()\n",
     "plt.show()\n"
    ]
   },
@@ -204,24 +177,22 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "# Load the dataset from a CSV file\n",
     "data = pd.read_csv(r\"C:\\Users\\gnani\\Downloads\\Custom_CNN_Features.csv\")\n",
-    "\n",
+    "# Split the data into features (X) and labels (y)\n",
     "X = data.drop(columns=['Filename', 'Label'])\n",
     "y = data['Label']\n",
-    "\n",
+    "# Split the data into training and testing sets\n",
     "Tr_X, Te_X, Tr_y, Te_y = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
+    "# Create a Decision Tree Classifier\n",
     "model = DecisionTreeClassifier()\n",
-    "\n",
     "model.fit(Tr_X, Tr_y)\n",
-    "\n",
     "train_accuracy = model.score(Tr_X, Tr_y)\n",
     "print(\"Training Set Accuracy:\", train_accuracy)\n",
-    "\n",
+    "# Calculate and print the test set accuracy\n",
     "test_accuracy = model.score(Te_X, Te_y)\n",
     "print(\"Test Set Accuracy:\", test_accuracy)\n",
-    "\n",
+    "# Visualize the decision tree\n",
     "plt.figure(figsize=(70, 20))\n",
     "plot_tree(model, filled=True, feature_names=X.columns.tolist(), class_names=[str(label) for label in model.classes_])\n",
     "plt.show()\n"
@@ -254,15 +225,14 @@
    ],
    "source": [
     "model = DecisionTreeClassifier(max_depth=5)\n",
-    "\n",
     "model.fit(Tr_X, Tr_y)\n",
-    "\n",
+    "# Calculate and print the training set accuracy with the maximum depth constraint\n",
     "train_accuracy = model.score(Tr_X, Tr_y)\n",
     "print(\"Training Set Accuracy with Max Depth Constraint:\", train_accuracy)\n",
-    "\n",
+    "# Calculate and print the test set accuracy with the maximum depth constraint\n",
     "test_accuracy = model.score(Te_X, Te_y)\n",
     "print(\"Test Set Accuracy with Max Depth Constraint:\", test_accuracy)\n",
-    "\n",
+    "# Visualize the decision tree\n",
     "plt.figure(figsize=(70, 20))\n",
     "plot_tree(model, filled=True, feature_names=X.columns.tolist(), class_names=class_names.tolist())\n",
     "plt.show()"
@@ -295,15 +265,11 @@
    ],
    "source": [
     "model = DecisionTreeClassifier(criterion=\"entropy\", max_depth=5)\n",
-    "\n",
     "model.fit(Tr_X, Tr_y)\n",
-    "\n",
     "train_accuracy = model.score(Tr_X, Tr_y)\n",
     "print(\"Training Set Accuracy with Entropy Criterion:\", train_accuracy)\n",
-    "\n",
     "test_accuracy = model.score(Te_X, Te_y)\n",
     "print(\"Test Set Accuracy with Entropy Criterion:\", test_accuracy)\n",
-    "\n",
     "plt.figure(figsize=(70, 20))\n",
     "plot_tree(model, filled=True, feature_names=X.columns.tolist(), class_names=class_names.tolist())\n",
     "plt.show()"
@@ -356,30 +322,21 @@
    ],
    "source": [
     "data = data.select_dtypes(include=[float, int])\n",
-    "\n",
     "X = data.drop(columns=['Label'])\n",
     "y = data['Label']\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
     "decision_tree = DecisionTreeClassifier(random_state=42)\n",
     "decision_tree.fit(X_train, y_train)\n",
-    "\n",
     "random_forest = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "random_forest.fit(X_train, y_train)\n",
-    "\n",
     "y_pred_decision_tree = decision_tree.predict(X_test)\n",
     "decision_tree_accuracy = accuracy_score(y_test, y_pred_decision_tree)\n",
-    "\n",
     "y_pred_random_forest = random_forest.predict(X_test)\n",
     "random_forest_accuracy = accuracy_score(y_test, y_pred_random_forest)\n",
-    "\n",
     "print(\"Decision Tree Accuracy:\", decision_tree_accuracy)\n",
     "print(\"Random Forest Accuracy:\", random_forest_accuracy)\n",
-    "\n",
     "print(\"Decision Tree Classification Report:\\n\", classification_report(y_test, y_pred_decision_tree))\n",
     "print(\"Random Forest Classification Report:\\n\", classification_report(y_test, y_pred_random_forest))\n",
-    "\n",
     "print(\"Decision Tree Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_decision_tree))\n",
     "print(\"Random Forest Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_random_forest))"
    ]
